--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <section class="section hero-section">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button class="order-btn" type="button">Order Service</button>
+          <button class="order-btn" type="button" data-modal-open>Order Service</button>
         </div>
       </section>
 
@@ -476,7 +476,111 @@
             </li>
           </ul>
         </div>
+        <div class="footer-right-content">
+          <p class="footer-subscribe-title">Subscribe</p>
+          <form class="subscribe-form">
+            <label>
+              <input
+                class="subscribe-email"
+                name="subscribe-email"
+                placeholder="Email"
+                type="email"
+              />
+            </label>
+            <button type="submit" class="subscribe-btn">
+              <span>Subscribe</span> 
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <!-- BACKDROP WITH MODAL -->
+    <div class="backdrop" data-modal>
+      <div class="modal">
+        <button class="modal-close-btn" type="button" data-modal-close>
+          <svg class="modal-close-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-slogan">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="review-form">
+          <div class="form-field">
+            <label class="form-label" for="input-name">Name</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-name"
+                id="input-name"
+                type="text"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field">
+            <label class="form-label" for="input-tel">Phone</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-tel"
+                id="input-tel"
+                type="tel"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field">
+            <label class="form-label" for="input-email">Email</label>
+            <div class="input-wrapper">
+              <input
+                class="form-input"
+                name="input-email"
+                id="input-email"
+                type="email"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-field-message">
+            <label class="form-label" for="input-comment">Comment</label>
+            <textarea
+              class="form-message"
+              id="input-comment"
+              name="input-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="form-field-checkbox">
+            <input
+              class="form-checkbox visually-hidden"
+              id="privacy-policy"
+              type="checkbox"
+              name="privacy-policy"
+              value="true"
+            />
+            <label class="form-checkbox-label" for="privacy-policy">
+              <span class="form-custom-checkbox">
+                <svg class="form-custom-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-checkmark"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a class="privacy-policy-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="form-submit-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
