--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
       <section class="section hero-section">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button class="order-btn" type="button" data-modal-open>Order Service</button>
+          <button class="order-btn" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -479,19 +481,20 @@
         <div class="footer-right-content">
           <p class="footer-subscribe-title">Subscribe</p>
           <form class="subscribe-form">
-            <label>
+            <label class="subscribe-label">
               <input
                 class="subscribe-email"
                 name="subscribe-email"
-                placeholder="Email"
+                placeholder="E-mail"
                 type="email"
               />
             </label>
             <button type="submit" class="subscribe-btn">
-              <span>Subscribe</span> 
+              <span>Subscribe</span>
               <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -510,15 +513,15 @@
         </p>
         <form class="review-form">
           <div class="form-field">
-            <label class="form-label" for="input-name">Name</label>
+            <label class="form-label" for="user-name">Name</label>
             <div class="input-wrapper">
               <input
                 class="form-input"
-                name="input-name"
-                id="input-name"
+                name="user-name"
+                id="user-name"
                 type="text"
               />
-              <svg class="form-icon" width="18" height="18">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user"></use>
               </svg>
             </div>
@@ -552,23 +555,23 @@
             </div>
           </div>
           <div class="form-field-message">
-            <label class="form-label" for="input-comment">Comment</label>
+            <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="form-message"
-              id="input-comment"
-              name="input-comment"
+              id="user-comment"
+              name="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
           <div class="form-field-checkbox">
             <input
               class="form-checkbox visually-hidden"
-              id="privacy-policy"
+              id="user-privacy"
               type="checkbox"
-              name="privacy-policy"
+              name="user-privacy"
               value="true"
             />
-            <label class="form-checkbox-label" for="privacy-policy">
+            <label class="form-checkbox-label" for="user-privacy">
               <span class="form-custom-checkbox">
                 <svg class="form-custom-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-checkmark"></use>
