--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
               />
             </label>
             <button type="submit" class="subscribe-btn">
-              <span>Subscribe</span>
+              Subscribe
               <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
